objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Hosting_Type__c</fullName>
        <inlineHelpText>Dedicated/ Shared/ On Premise/ SAAS ?</inlineHelpText>
        <label>Hosting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dedicated</fullName>
                </value>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Dedicated Cloud (DC)</fullName>
                    <isActive>false</isActive>
                    <label>Dedicated Cloud (DC)</label>
                </value>
                <value>
                    <fullName>Multi-Tenant Cloud (MC)</fullName>
                    <isActive>false</isActive>
                    <label>Multi-Tenant Cloud (MC)</label>
                </value>
                <value>
                    <fullName>On-Premise (OP)</fullName>
                    <isActive>false</isActive>
                    <label>On-Premise (OP)</label>
                </value>
                <value>
                    <fullName>Private Cloud (PC)</fullName>
                    <isActive>false</isActive>
                    <label>Private Cloud (PC)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hosting_Type_from_Products__c</fullName>
        <formula>IF(Dedicated_Foundation_Items__c&gt;0, &quot;Dedicated&quot;, 
IF(SaaS_Foundation_Items__c &gt;0, &quot;SaaS&quot;,
IF(Self_Hosted_Foundation_Items__c &gt;0, &quot;Self-Hosted&quot;, &quot;None&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hosting Type from Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Spent_This_Week__c</fullName>
        <description>For ES Team use only</description>
        <inlineHelpText>For ES Team Use only</inlineHelpText>
        <label>Hours Spent This Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <description>For ES TEam use only</description>
        <inlineHelpText>ES Team use only</inlineHelpText>
        <label>Hours Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>OpportunityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Implementation_Stage__c</fullName>
        <label>IT/Implementation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Onboarding__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Discovery Call</fullName>
                </value>
                <value>
                    <fullName>Go-Live Prep</fullName>
                </value>
                <value>
                    <fullName>Go-Live Support</fullName>
                </value>
                <value>
                    <fullName>Implementation Closure</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Pre-requisite check</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Integrations with AR</fullName>
                </value>
                <value>
                    <fullName>Production On-boarding</fullName>
                </value>
                <value>
                    <fullName>Sanity Checks</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_Pain__c</fullName>
        <inlineHelpText>What are their Primary Business Objectives?</inlineHelpText>
        <label>Identify Pain:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Closed_Date__c</fullName>
        <label>Implementation Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_End_Date__c</fullName>
        <label>Expected Implementation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Start_Date__c</fullName>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <inlineHelpText>Define the ES Resource Availability for implementation</inlineHelpText>
        <label>Implementation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Managed Resource</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Infrastructure__c</fullName>
        <label>Infrastructure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Prem</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Dedicated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <formula>TEXT(Account.Integration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populates from respective Account. Edit the account to change it.</inlineHelpText>
        <label>Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Invoice Number from accounting</description>
        <externalId>true</externalId>
        <inlineHelpText>Invoice Number from accounting</inlineHelpText>
        <label>Invoice Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Origin__c</fullName>
        <formula>If( BEGINS(Invoice_Number__c, &quot;ARFR&quot;), &quot;France&quot;,
If( BEGINS(Invoice_Number__c, &quot;AR&quot;), &quot;AutoRABIT&quot;,
If( BEGINS(Invoice_Number__c, &quot;CS&quot;) || BEGINS(Invoice_Number__c, &quot;I&quot;) || ISNUMBER(Invoice_Number__c) || BEGINS(UPPER(Invoice_Number__c), &quot;C&quot;), &quot;CodeScan&quot;,
If( ISBLANK(Invoice_Number__c), &quot;Not Invoiced&quot;, 
&quot;Unknown&quot;
)
)
)
)</formula>
        <label>Invoice Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_From_AutoRABIT_QBO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced From AutoRABIT QBO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiced_Time_Stamp__c</fullName>
        <description>Date/time that the Opp Stage was set to Invoiced</description>
        <label>Invoiced Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Current_Subs_equal_to_Renewal_Upsell__c</fullName>
        <inlineHelpText>To understand if there is a change in the Subs on Renewal/ Upsell</inlineHelpText>
        <label>Is Current Subs equal to Renewal/ Upsell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Introduction_done_by_ISV_Partner__c</fullName>
        <label>Is Introduction done by ISV Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Renewal__c</fullName>
        <formula>INCLUDES(Opportunity_Type_New_Renewal_Upsell__c, &quot;Renewal&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_RoW__c</fullName>
        <formula>if( Billing_Country__c = &apos;United States&apos;, &quot;No&quot;, &quot;Yes&quot;)</formula>
        <label>Is RoW?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_eligibile_for_Premier_support__c</fullName>
        <inlineHelpText>Enable if the Customer is eligible for Premier support.
If this is not enabled ,it means customer is availing standard support services.</inlineHelpText>
        <label>Is eligibile for Premier support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_ARR__c</fullName>
        <formula>Opportunity_ARR_Amount__c - Service_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Licensed_ARR__c</fullName>
        <description>Annual Recurring Revenue (ARR) from ARM and Vault product subscriptions.</description>
        <inlineHelpText>Annual Recurring Revenue (ARR) from ARM and Vault product subscriptions.</inlineHelpText>
        <label>Licensed ARR</label>
        <summarizedField>OpportunityLineItem.Annual_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Recurring_Revenue__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductFamily__c</field>
            <operation>equals</operation>
            <value>ARM, Vault, CodeScan</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logged_in_User__c</fullName>
        <formula>IF(OR( OwnerId == $User.Id ,  $User.FirstName ==&apos;Sidharth&apos;,$User.FirstName==&apos;Vishnu&apos;,$User.LastName==&apos;Marketing&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Built in-house</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Fit</fullName>
                </value>
                <value>
                    <fullName>Technical Concerns</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metrics__c</fullName>
        <inlineHelpText>What is the economic impact of the solution?</inlineHelpText>
        <label>Metrics:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewLogo_ARR_Amount__c</fullName>
        <description>We are using this field to forecast opportunity ARR amount for newlogo opportunities.</description>
        <inlineHelpText>ARR Opportunity amount for New Logo Opportunities.</inlineHelpText>
        <label>NewLogo ARR Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_No_of_subs__c</fullName>
        <label>New_No_of_subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Oppty_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Oppty Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step_Date__c</fullName>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step_Tech_Date__c</fullName>
        <label>Next Step (Tech) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Week_Action_Items__c</fullName>
        <inlineHelpText>Mention the tasks planned for next week</inlineHelpText>
        <label>Next Week Action Items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Hours_Service__c</fullName>
        <label>No of Hours (Service)</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductFamily__c</field>
            <operation>contains</operation>
            <value>Professional Services</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Product_Subs_Vault__c</fullName>
        <label>No. of Product Subs (Vault)</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductFamily__c</field>
            <operation>equals</operation>
            <value>Vault</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Recurring_Products__c</fullName>
        <inlineHelpText>Count of Recurring Revenue products.</inlineHelpText>
        <label>No. of Recurring Products</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Recurring_Revenue__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Product_Subscriptions__c</fullName>
        <inlineHelpText>ARM Product</inlineHelpText>
        <label>No. of Product Subs (ARM)</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductFamily__c</field>
            <operation>equals</operation>
            <value>ARM, DevSecOps</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>On_Prem_Subscription_Id__c</fullName>
        <label>On Prem Subscription Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppId__c</fullName>
        <displayFormat>{00}</displayFormat>
        <label>OppId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opp_Line_Items__c</fullName>
        <label>Opp Line Items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityAmount_AR__c</fullName>
        <label>Opportunity Amount (AR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <formula>&apos;AR&apos;+if(LEN(Text(Month(DateValue(CreatedDate)) ))==1,&apos;0&apos;+Text(Month(DateValue(CreatedDate)) ),Text(Month(DateValue(CreatedDate)) ))+RIGHT(Text(Year( DateValue( CreatedDate ) )),2)+OppId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ARR_Amount__c</fullName>
        <description>Some products have a duration that is part of the subscription period. This formula recognizes the ARR across the subscription period evenly. For example if it&apos;s a 24 month duration with one product for 12 months and a different product for 12 months, we cannot count both products ARR for all 12 months. We have to find the Average ARR across the subscription and arrive at the ARR multiplying by 12.</description>
        <formula>(Total_Price_of_Recurring_Products__c/IF(Value(of_Months_for_Subs_Activation__c)&gt;0,Value(of_Months_for_Subs_Activation__c),12))*12
* IF(ISBLANK( Opt_Out_Date__c ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR Amount Monthly Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_ARMule__c</fullName>
        <label>Opportunity Amount (Mule)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_ARVault__c</fullName>
        <label>Opportunity Amount (AR Vault)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_AWS__c</fullName>
        <label>Opportunity Amount (AWS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Advisory__c</fullName>
        <label>Opportunity Amount (Advisory)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_On_Premise__c</fullName>
        <label>Opportunity Amount (On Prem)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Paid_POC__c</fullName>
        <label>Opportunity Amount Paid POC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Partner__c</fullName>
        <label>Opportunity Amount (Partner)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Professional_Service__c</fullName>
        <label>Opportunity Amount (Services)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Service__c</fullName>
        <label>Opportunity Amount Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Support__c</fullName>
        <label>Opportunity Amount (Support)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <description>(Sale Price * Quantity * # of Months)</description>
        <inlineHelpText>Total Contract Value.</inlineHelpText>
        <label>Opportunity Amount</label>
        <summarizedField>OpportunityLineItem.Total_Price__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Status__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_New_Renewal_Upsell__c</fullName>
        <inlineHelpText>Its mandatory to update the type of Opportunity</inlineHelpText>
        <label>Oppty Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Logo</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Downsell</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Opportunity)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_state__c</fullName>
        <formula>IF( ISPICKVAL( StageName ,&apos;Closed Won-Implementation Incomplete&apos;) ,&quot;Onboarding&quot;,
IF(ISPICKVAL( StageName ,&apos;Closed Won - Implementation Completed&apos;) &amp;&amp; ADDMONTHS(Today(),3)== Contract_End_Date__c,&quot;Stable &quot;,
IF(Contract_End_Date__c==Today(),&quot;Renewal&quot;,
IF(Number_of_Product_Subscriptions__c&lt;&gt;0.00 &amp;&amp; Account.Previous_Max_Subs__c &lt;= Number_of_Product_Subscriptions__c ,&quot;Upsell&quot;,
IF(Number_of_Product_Subscriptions__c&lt;&gt;0.00 &amp;&amp; Account.Previous_Max_Subs__c &gt; Number_of_Product_Subscriptions__c  , &quot;Down sell&quot;,&apos;&apos;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_state</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppt_Amout_New_Logs_upsell__c</fullName>
        <label>Opportunity Amount New Logs + upsell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oppt_Amout_Renewal__c</fullName>
        <label>Opportunity Amout Renewal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oppt_Amout_Upsell__c</fullName>
        <label>Opportunity Amout Upsell?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oppty_Amt_AR__c</fullName>
        <inlineHelpText>Calculates AR related line items total amount</inlineHelpText>
        <label>Oppty Amt (AR)</label>
        <summarizedField>OpportunityLineItem.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_this_PS__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oppty_Amt_Services__c</fullName>
        <label>Oppty Amt (Services)</label>
        <summarizedField>OpportunityLineItem.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_this_PS__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oppty_Amt_Value_AWS__c</fullName>
        <formula>if (ISBLANK(  Opportunity_Amount_AWS__c  ) ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Amt Value (AWS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Amt_Value_Services__c</fullName>
        <formula>if (ISBLANK(  Opportunity_Amount_Professional_Service__c ) ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Amt Value (Services)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Amt_Value_Support__c</fullName>
        <formula>if (ISBLANK(  Opportunity_Amount_Support__c ) ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Amt Value (Support)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Amt_Value_VAULT__c</fullName>
        <formula>if (ISBLANK(  Opportunity_Amount_ARVault__c ) ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Amt Value (VAULT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Available_Until__c</fullName>
        <description>If the quote/order has an opt out clause, put the date here by which it must be exercised.</description>
        <inlineHelpText>If the quote/order has an opt out clause, put the date here by which it must be exercised.</inlineHelpText>
        <label>Opt Out Available Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Clause__c</fullName>
        <formula>&quot;Customer has the option to terminate this agreement on or before &quot; &amp; TEXT(Opt_Out_Available_Until__c) &amp; &quot; at no cost to the Customer. Upon termination on or before &quot; &amp; TEXT(Opt_Out_Available_Until__c) &amp; &quot;, any fees for Services paid by the Customer will be refunded and there will be no further obligations to AutoRABIT by the Customer. Notice of termination must be provided in writing, via email to &quot; &amp; Owner.Email &amp;&quot;.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt Out Clause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Date__c</fullName>
        <description>Date the customer exercised the opt out clause of the contract for this opportunity. Only fill this out if the opportunity was Closed Won.</description>
        <inlineHelpText>Date the customer exercised the opt out clause of the contract for this opportunity. Only fill this out if the opportunity was Closed Won.</inlineHelpText>
        <label>Opt Out Exercise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A trigger will check this box if someone attaches a file to the opportunity that has the words PO or Order or Signed in it.</description>
        <label>Order Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <formula>OppId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Product_Interests__c</fullName>
        <label>Other Product Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARvault</fullName>
                </value>
                <value>
                    <fullName>ARMule</fullName>
                </value>
                <value>
                    <fullName>AutoRABIT</fullName>
                </value>
                <value>
                    <fullName>AutoRABIT DX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Delay__c</fullName>
        <formula>TODAY() - Implementation_End_Date__c</formula>
        <label>Overall Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Matches_Account__c</fullName>
        <description>Used to identify records that need the owner updated on either the opportunity or account</description>
        <formula>OwnerId  =  Account.OwnerId</formula>
        <label>Owner Matches Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Name_For_Tableau__c</fullName>
        <formula>Owner.FirstName &amp; &apos; &apos; &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name For Tableau</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Hrs__c</fullName>
        <description>Stores No of Professional Svc Hours per client.</description>
        <label>PS Hrs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Date__c</fullName>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Upfront_ARR__c</fullName>
        <label>Paid Upfront ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Parent Opportunity)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Referral_Percentage__c</fullName>
        <description>Referral Percentage set at the Partner Account selected.</description>
        <formula>Partner_Account__r.Referral_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Referral Percentage set at the Partner Account selected.</inlineHelpText>
        <label>Partner Account Referral Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>